--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -11,13 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0-",
-    "@angular/common": "~12.1.0-",
+    "@angular/common": "^12.1.4",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
     "@angular/forms": "~12.1.0-",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "bootstrap": "^5.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
